--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <a href="" class="lightbox_close">x</a>
 
         <article>
-            <h3 class="lb_heading">Karthi</h3>
+            <h3 class="lb_heading">Karthik</h3>
 
             <p class="lb_text">
                 Playing Vanthiyathevan who is a warrior of the Vaanar Clan and is a witty prince who is asked to deliver messages to the crown by Adithya Karikalan.
@@ -141,7 +141,7 @@
         <a href="" class="lightbox_close">x</a>
 
         <article>
-            <h3 class="lb_heading">Jayam</h3>
+            <h3 class="lb_heading">Jayam Ravi</h3>
 
             <p class="lb_text">
                 Playing Arulmozhi Varman who is also known as Ponniyin Selvan because he had nearly drowned in the Ponni River in his childhood but was saved so from then on, people believed that the river Ponni saved him and named him “Ponniyin Selvan”. He is the younger brother to Adithya Karikalan.
@@ -176,7 +176,7 @@
         <a href="" class="lightbox_close">x</a>
 
         <article>
-            <h3 class="lb_heading">Chiyan Vikram</h3>
+            <h3 class="lb_heading">Chiyaan Vikram</h3>
 
             <p class="lb_text">
                 Playing Adithya Karikalan who is the crown prince to the Chola Empire. Eldest son of Sundara Chola, elder brother of Arulmozhi Varman and Kundavai.
